# Pokemon-GL

./: .gitignore  meson.build  readme.md
data/: build.py  types.ini
data/moves/: absorb.json  acid.json  ember.json  growl.json  scratch.json  tackle.json  tail_whip.json
data/pokemon/: 1-bulbasaur.json  4-charmander.json  7-squirtle.json
include/: battle.hpp  element.hpp  move.hpp  moves.hpp  opengl.hpp  pokemon.hpp  species.hpp  types.hpp
include/glad/: glad.h
include/opengl/: color.hpp  shader.hpp
src/: battle.cpp  main.cpp  pokemon.cpp
src/opengl/: color.cpp  glad.c  shader.cpp
